ic/parser/DIDParser.py
# Generated from DIDParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DIDParser ( Parser ):

    grammarFileName = "DIDParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'type'", "'query'", "'oneway'", "<INVALID>", "<INVALID>", 
                     "'opt'", "'vec'", "'blob'", "'record'", "'variant'", 
                     "'service'", "'func'", "<INVALID>", "'('", "')'", "'{'", 
                     "'}'", "'->'", "':'", "';'", "'='", "','" ]

    symbolicNames = [ "<INVALID>", "BlockComment", "LineComment", "S", "Type", 
                      "Query", "Oneway", "PrimType", "NumType", "OPT", "VEC", 
                      "BLOB", "RECORD", "VARIANT", "Service", "FUNC", "Name", 
                      "LeftP", "RightP", "LeftB", "RightB", "Arrow", "Colon", 
                      "Semicolon", "Eq", "Comma" ]

    RULE_program = 0
    RULE_defination = 1
    RULE_actor = 2
    RULE_actortype = 3
    RULE_datatype = 4
    RULE_comptype = 5
    RULE_constype = 6
    RULE_recordfield = 7
    RULE_variantfield = 8
    RULE_reftype = 9
    RULE_functype = 10
    RULE_tuptype = 11
    RULE_argtypes = 12
    RULE_funcann = 13
    RULE_methodtype = 14

    ruleNames =  [ "program", "defination", "actor", "actortype", "datatype", 
                   "comptype", "constype", "recordfield", "variantfield", 
                   "reftype", "functype", "tuptype", "argtypes", "funcann", 
                   "methodtype" ]

    EOF = Token.EOF
    BlockComment=1
    LineComment=2
    S=3
    Type=4
    Query=5
    Oneway=6
    PrimType=7
    NumType=8
    OPT=9
    VEC=10
    BLOB=11
    RECORD=12
    VARIANT=13
    Service=14
    FUNC=15
    Name=16
    LeftP=17
    RightP=18
    LeftB=19
    RightB=20
    Arrow=21
    Colon=22
    Semicolon=23
    Eq=24
    Comma=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defination(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DIDParser.DefinationContext)
            else:
                return self.getTypedRuleContext(DIDParser.DefinationContext,i)


        def actor(self):
            return self.getTypedRuleContext(DIDParser.ActorContext,0)


        def getRuleIndex(self):
            return DIDParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DIDParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DIDParser.Type:
                self.state = 30
                self.defination()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DIDParser.Service:
                self.state = 36
                self.actor()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Type(self):
            return self.getToken(DIDParser.Type, 0)

        def Name(self):
            return self.getToken(DIDParser.Name, 0)

        def Eq(self):
            return self.getToken(DIDParser.Eq, 0)

        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def Semicolon(self):
            return self.getToken(DIDParser.Semicolon, 0)

        def getRuleIndex(self):
            return DIDParser.RULE_defination

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefination" ):
                listener.enterDefination(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefination" ):
                listener.exitDefination(self)




    def defination(self):

        localctx = DIDParser.DefinationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_defination)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(DIDParser.Type)
            self.state = 40
            self.match(DIDParser.Name)
            self.state = 41
            self.match(DIDParser.Eq)
            self.state = 42
            self.datatype()
            self.state = 43
            self.match(DIDParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Service(self):
            return self.getToken(DIDParser.Service, 0)

        def Colon(self):
            return self.getToken(DIDParser.Colon, 0)

        def actortype(self):
            return self.getTypedRuleContext(DIDParser.ActortypeContext,0)


        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(DIDParser.Name)
            else:
                return self.getToken(DIDParser.Name, i)

        def tuptype(self):
            return self.getTypedRuleContext(DIDParser.TuptypeContext,0)


        def Arrow(self):
            return self.getToken(DIDParser.Arrow, 0)

        def getRuleIndex(self):
            return DIDParser.RULE_actor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActor" ):
                listener.enterActor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActor" ):
                listener.exitActor(self)




    def actor(self):

        localctx = DIDParser.ActorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_actor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(DIDParser.Service)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DIDParser.Name:
                self.state = 46
                self.match(DIDParser.Name)


            self.state = 49
            self.match(DIDParser.Colon)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DIDParser.LeftP:
                self.state = 50
                self.tuptype()
                self.state = 51
                self.match(DIDParser.Arrow)


            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DIDParser.LeftB]:
                self.state = 55
                self.actortype()
                pass
            elif token in [DIDParser.Name]:
                self.state = 56
                self.match(DIDParser.Name)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActortypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftB(self):
            return self.getToken(DIDParser.LeftB, 0)

        def RightB(self):
            return self.getToken(DIDParser.RightB, 0)

        def methodtype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DIDParser.MethodtypeContext)
            else:
                return self.getTypedRuleContext(DIDParser.MethodtypeContext,i)


        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(DIDParser.Semicolon)
            else:
                return self.getToken(DIDParser.Semicolon, i)

        def getRuleIndex(self):
            return DIDParser.RULE_actortype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActortype" ):
                listener.enterActortype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActortype" ):
                listener.exitActortype(self)




    def actortype(self):

        localctx = DIDParser.ActortypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_actortype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DIDParser.LeftB)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DIDParser.Name:
                self.state = 60
                self.methodtype()
                self.state = 61
                self.match(DIDParser.Semicolon)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(DIDParser.RightB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatatypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DIDParser.RULE_datatype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrimitiveContext(DatatypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.DatatypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PrimType(self):
            return self.getToken(DIDParser.PrimType, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitive" ):
                listener.enterPrimitive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitive" ):
                listener.exitPrimitive(self)


    class ComponentContext(DatatypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.DatatypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comptype(self):
            return self.getTypedRuleContext(DIDParser.ComptypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)


    class NameContext(DatatypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.DatatypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(DIDParser.Name, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)



    def datatype(self):

        localctx = DIDParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_datatype)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DIDParser.Name]:
                localctx = DIDParser.NameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(DIDParser.Name)
                pass
            elif token in [DIDParser.PrimType]:
                localctx = DIDParser.PrimitiveContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(DIDParser.PrimType)
                pass
            elif token in [DIDParser.OPT, DIDParser.VEC, DIDParser.BLOB, DIDParser.RECORD, DIDParser.VARIANT, DIDParser.Service, DIDParser.FUNC]:
                localctx = DIDParser.ComponentContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.comptype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComptypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constype(self):
            return self.getTypedRuleContext(DIDParser.ConstypeContext,0)


        def reftype(self):
            return self.getTypedRuleContext(DIDParser.ReftypeContext,0)


        def getRuleIndex(self):
            return DIDParser.RULE_comptype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComptype" ):
                listener.enterComptype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComptype" ):
                listener.exitComptype(self)




    def comptype(self):

        localctx = DIDParser.ComptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comptype)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DIDParser.OPT, DIDParser.VEC, DIDParser.BLOB, DIDParser.RECORD, DIDParser.VARIANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.constype()
                pass
            elif token in [DIDParser.Service, DIDParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.reftype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DIDParser.RULE_constype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VariantContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIANT(self):
            return self.getToken(DIDParser.VARIANT, 0)
        def LeftB(self):
            return self.getToken(DIDParser.LeftB, 0)
        def variantfield(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DIDParser.VariantfieldContext)
            else:
                return self.getTypedRuleContext(DIDParser.VariantfieldContext,i)

        def RightB(self):
            return self.getToken(DIDParser.RightB, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(DIDParser.Semicolon)
            else:
                return self.getToken(DIDParser.Semicolon, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariant" ):
                listener.enterVariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariant" ):
                listener.exitVariant(self)


    class EmptyRecordContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RECORD(self):
            return self.getToken(DIDParser.RECORD, 0)
        def LeftB(self):
            return self.getToken(DIDParser.LeftB, 0)
        def RightB(self):
            return self.getToken(DIDParser.RightB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyRecord" ):
                listener.enterEmptyRecord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyRecord" ):
                listener.exitEmptyRecord(self)


    class EmptyVariantContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIANT(self):
            return self.getToken(DIDParser.VARIANT, 0)
        def LeftB(self):
            return self.getToken(DIDParser.LeftB, 0)
        def RightB(self):
            return self.getToken(DIDParser.RightB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyVariant" ):
                listener.enterEmptyVariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyVariant" ):
                listener.exitEmptyVariant(self)


    class BlobContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BLOB(self):
            return self.getToken(DIDParser.BLOB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlob" ):
                listener.enterBlob(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlob" ):
                listener.exitBlob(self)


    class OptionContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPT(self):
            return self.getToken(DIDParser.OPT, 0)
        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)


    class RecordContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RECORD(self):
            return self.getToken(DIDParser.RECORD, 0)
        def LeftB(self):
            return self.getToken(DIDParser.LeftB, 0)
        def recordfield(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DIDParser.RecordfieldContext)
            else:
                return self.getTypedRuleContext(DIDParser.RecordfieldContext,i)

        def RightB(self):
            return self.getToken(DIDParser.RightB, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(DIDParser.Semicolon)
            else:
                return self.getToken(DIDParser.Semicolon, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecord" ):
                listener.enterRecord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecord" ):
                listener.exitRecord(self)


    class VectorContext(ConstypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.ConstypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VEC(self):
            return self.getToken(DIDParser.VEC, 0)
        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVector" ):
                listener.enterVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVector" ):
                listener.exitVector(self)



    def constype(self):

        localctx = DIDParser.ConstypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constype)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = DIDParser.OptionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(DIDParser.OPT)
                self.state = 80
                self.datatype()
                pass

            elif la_ == 2:
                localctx = DIDParser.VectorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(DIDParser.VEC)
                self.state = 82
                self.datatype()
                pass

            elif la_ == 3:
                localctx = DIDParser.BlobContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.match(DIDParser.BLOB)
                pass

            elif la_ == 4:
                localctx = DIDParser.EmptyRecordContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.match(DIDParser.RECORD)
                self.state = 85
                self.match(DIDParser.LeftB)
                self.state = 86
                self.match(DIDParser.RightB)
                pass

            elif la_ == 5:
                localctx = DIDParser.RecordContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.match(DIDParser.RECORD)
                self.state = 88
                self.match(DIDParser.LeftB)
                self.state = 89
                self.recordfield()
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 90
                        self.match(DIDParser.Semicolon)
                        self.state = 91
                        self.recordfield() 
                    self.state = 96
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DIDParser.Semicolon:
                    self.state = 97
                    self.match(DIDParser.Semicolon)


                self.state = 100
                self.match(DIDParser.RightB)
                pass

            elif la_ == 6:
                localctx = DIDParser.EmptyVariantContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 102
                self.match(DIDParser.VARIANT)
                self.state = 103
                self.match(DIDParser.LeftB)
                self.state = 104
                self.match(DIDParser.RightB)
                pass

            elif la_ == 7:
                localctx = DIDParser.VariantContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 105
                self.match(DIDParser.VARIANT)
                self.state = 106
                self.match(DIDParser.LeftB)
                self.state = 107
                self.variantfield()
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 108
                        self.match(DIDParser.Semicolon)
                        self.state = 109
                        self.variantfield() 
                    self.state = 114
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DIDParser.Semicolon:
                    self.state = 115
                    self.match(DIDParser.Semicolon)


                self.state = 118
                self.match(DIDParser.RightB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordfieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DIDParser.RULE_recordfield

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RecordDataContext(RecordfieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.RecordfieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordData" ):
                listener.enterRecordData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordData" ):
                listener.exitRecordData(self)


    class RecordKVContext(RecordfieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.RecordfieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(DIDParser.Name, 0)
        def Colon(self):
            return self.getToken(DIDParser.Colon, 0)
        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordKV" ):
                listener.enterRecordKV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordKV" ):
                listener.exitRecordKV(self)



    def recordfield(self):

        localctx = DIDParser.RecordfieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_recordfield)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = DIDParser.RecordKVContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(DIDParser.Name)
                self.state = 123
                self.match(DIDParser.Colon)
                self.state = 124
                self.datatype()
                pass

            elif la_ == 2:
                localctx = DIDParser.RecordDataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.datatype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariantfieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DIDParser.RULE_variantfield

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VariantNameContext(VariantfieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.VariantfieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(DIDParser.Name, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariantName" ):
                listener.enterVariantName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariantName" ):
                listener.exitVariantName(self)


    class VariantKVContext(VariantfieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DIDParser.VariantfieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(DIDParser.Name, 0)
        def Colon(self):
            return self.getToken(DIDParser.Colon, 0)
        def datatype(self):
            return self.getTypedRuleContext(DIDParser.DatatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariantKV" ):
                listener.enterVariantKV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariantKV" ):
                listener.exitVariantKV(self)



    def variantfield(self):

        localctx = DIDParser.VariantfieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variantfield)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = DIDParser.VariantKVContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(DIDParser.Name)
                self.state = 129
                self.match(DIDParser.Colon)
                self.state = 130
                self.datatype()
                pass

            elif la_ == 2:
                localctx = DIDParser.VariantNameContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(DIDParser.Name)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReftypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(DIDParser.FUNC, 0)

        def functype(self):
            return self.getTypedRuleContext(DIDParser.FunctypeContext,0)


        def Service(self):
            return self.getToken(DIDParser.Service, 0)

        def actortype(self):
            return self.getTypedRuleContext(DIDParser.ActortypeContext,0)


        def getRuleIndex(self):
            return DIDParser.RULE_reftype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReftype" ):
                listener.enterReftype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReftype" ):
                listener.exitReftype(self)




    def reftype(self):

        localctx = DIDParser.ReftypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_reftype)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DIDParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(DIDParser.FUNC)
                self.state = 135
                self.functype()
                pass
            elif token in [DIDParser.Service]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(DIDParser.Service)
                self.state = 137
                self.actortype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tuptype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DIDParser.TuptypeContext)
            else:
                return self.getTypedRuleContext(DIDParser.TuptypeContext,i)


        def Arrow(self):
            return self.getToken(DIDParser.Arrow, 0)

        def funcann(self):
            return self.getTypedRuleContext(DIDParser.FuncannContext,0)


        def getRuleIndex(self):
            return DIDParser.RULE_functype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctype" ):
                listener.enterFunctype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctype" ):
                listener.exitFunctype(self)




    def functype(self):

        localctx = DIDParser.FunctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.tuptype()
            self.state = 141
            self.match(DIDParser.Arrow)
            self.state = 142
            self.tuptype()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DIDParser.Query or _la==DIDParser.Oneway:
                self.state = 143
                self.funcann()

